SQLParser.py
# Generated from SQL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SQLParser ( Parser ):

    grammarFileName = "SQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "'='", "'*'", "'<>'", 
                     "'<'", "'>'", "'<='", "'>='", "'!='", "'CREATE'", "'SELECT'", 
                     "'INSERT'", "'DROP'", "'DELETE'", "'UPDATE'", "'INTO'", 
                     "'FROM'", "'WHERE'", "'PRIMARY'", "'KEY'", "'TABLE'", 
                     "'VALUES'", "'DATABASE'", "'SET'", "'INT'", "'VARCHAR'", 
                     "'DATE'", "'AND'", "'OR'", "'XOR'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "CREATE", "SELECT", "INSERT", "DROP", "DELETE", "UPDATE", 
                      "INTO", "FROM", "WHERE", "PRIMARY", "KEY", "TABLE", 
                      "VALUES", "DATABASE", "SET", "INT", "VARCHAR", "DATE", 
                      "AND", "OR", "XOR", "ID", "NEWLINE", "INT_LITERAL", 
                      "STRING_LITERAL", "WS" ]

    RULE_sqlScript = 0
    RULE_statement = 1
    RULE_insertStatement = 2
    RULE_dropStatement = 3
    RULE_selectStatement = 4
    RULE_createStatement = 5
    RULE_createDatabaseStatement = 6
    RULE_deleteStatement = 7
    RULE_updateStatement = 8
    RULE_whereClause = 9
    RULE_condition = 10
    RULE_valueList = 11
    RULE_setValList = 12
    RULE_setVal = 13
    RULE_columnList = 14
    RULE_columnSpecList = 15
    RULE_columnSpec = 16
    RULE_columnType = 17
    RULE_columnConstraint = 18
    RULE_tableName = 19
    RULE_databaseName = 20
    RULE_literal = 21
    RULE_operator = 22

    ruleNames =  [ "sqlScript", "statement", "insertStatement", "dropStatement", 
                   "selectStatement", "createStatement", "createDatabaseStatement", 
                   "deleteStatement", "updateStatement", "whereClause", 
                   "condition", "valueList", "setValList", "setVal", "columnList", 
                   "columnSpecList", "columnSpec", "columnType", "columnConstraint", 
                   "tableName", "databaseName", "literal", "operator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    CREATE=12
    SELECT=13
    INSERT=14
    DROP=15
    DELETE=16
    UPDATE=17
    INTO=18
    FROM=19
    WHERE=20
    PRIMARY=21
    KEY=22
    TABLE=23
    VALUES=24
    DATABASE=25
    SET=26
    INT=27
    VARCHAR=28
    DATE=29
    AND=30
    OR=31
    XOR=32
    ID=33
    NEWLINE=34
    INT_LITERAL=35
    STRING_LITERAL=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SqlScriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SQLParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.StatementContext)
            else:
                return self.getTypedRuleContext(SQLParser.StatementContext,i)


        def getRuleIndex(self):
            return SQLParser.RULE_sqlScript

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSqlScript" ):
                listener.enterSqlScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSqlScript" ):
                listener.exitSqlScript(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSqlScript" ):
                return visitor.visitSqlScript(self)
            else:
                return visitor.visitChildren(self)




    def sqlScript(self):

        localctx = SQLParser.SqlScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sqlScript)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 46
                self.statement()
                self.state = 49 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 258048) != 0)):
                    break

            self.state = 51
            self.match(SQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectStatement(self):
            return self.getTypedRuleContext(SQLParser.SelectStatementContext,0)


        def createStatement(self):
            return self.getTypedRuleContext(SQLParser.CreateStatementContext,0)


        def dropStatement(self):
            return self.getTypedRuleContext(SQLParser.DropStatementContext,0)


        def insertStatement(self):
            return self.getTypedRuleContext(SQLParser.InsertStatementContext,0)


        def createDatabaseStatement(self):
            return self.getTypedRuleContext(SQLParser.CreateDatabaseStatementContext,0)


        def deleteStatement(self):
            return self.getTypedRuleContext(SQLParser.DeleteStatementContext,0)


        def updateStatement(self):
            return self.getTypedRuleContext(SQLParser.UpdateStatementContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SQLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.selectStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.createStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 55
                self.dropStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 56
                self.insertStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 57
                self.createDatabaseStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 58
                self.deleteStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 59
                self.updateStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSERT(self):
            return self.getToken(SQLParser.INSERT, 0)

        def INTO(self):
            return self.getToken(SQLParser.INTO, 0)

        def tableName(self):
            return self.getTypedRuleContext(SQLParser.TableNameContext,0)


        def VALUES(self):
            return self.getToken(SQLParser.VALUES, 0)

        def valueList(self):
            return self.getTypedRuleContext(SQLParser.ValueListContext,0)


        def columnList(self):
            return self.getTypedRuleContext(SQLParser.ColumnListContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_insertStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsertStatement" ):
                listener.enterInsertStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsertStatement" ):
                listener.exitInsertStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsertStatement" ):
                return visitor.visitInsertStatement(self)
            else:
                return visitor.visitChildren(self)




    def insertStatement(self):

        localctx = SQLParser.InsertStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_insertStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(SQLParser.INSERT)
            self.state = 63
            self.match(SQLParser.INTO)
            self.state = 64
            self.tableName()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 65
                self.match(SQLParser.T__0)
                self.state = 66
                self.columnList()
                self.state = 67
                self.match(SQLParser.T__1)


            self.state = 71
            self.match(SQLParser.VALUES)
            self.state = 72
            self.match(SQLParser.T__0)
            self.state = 73
            self.valueList()
            self.state = 74
            self.match(SQLParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DropStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DROP(self):
            return self.getToken(SQLParser.DROP, 0)

        def TABLE(self):
            return self.getToken(SQLParser.TABLE, 0)

        def DATABASE(self):
            return self.getToken(SQLParser.DATABASE, 0)

        def tableName(self):
            return self.getTypedRuleContext(SQLParser.TableNameContext,0)


        def databaseName(self):
            return self.getTypedRuleContext(SQLParser.DatabaseNameContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_dropStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDropStatement" ):
                listener.enterDropStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDropStatement" ):
                listener.exitDropStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDropStatement" ):
                return visitor.visitDropStatement(self)
            else:
                return visitor.visitChildren(self)




    def dropStatement(self):

        localctx = SQLParser.DropStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_dropStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(SQLParser.DROP)
            self.state = 77
            _la = self._input.LA(1)
            if not(_la==23 or _la==25):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [33]:
                self.state = 78
                self.tableName()
                pass
            elif token in [36]:
                self.state = 79
                self.databaseName()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(SQLParser.SELECT, 0)

        def FROM(self):
            return self.getToken(SQLParser.FROM, 0)

        def tableName(self):
            return self.getTypedRuleContext(SQLParser.TableNameContext,0)


        def columnList(self):
            return self.getTypedRuleContext(SQLParser.ColumnListContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(SQLParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_selectStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectStatement" ):
                listener.enterSelectStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectStatement" ):
                listener.exitSelectStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectStatement" ):
                return visitor.visitSelectStatement(self)
            else:
                return visitor.visitChildren(self)




    def selectStatement(self):

        localctx = SQLParser.SelectStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_selectStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(SQLParser.SELECT)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5 or _la==33:
                self.state = 83
                self.columnList()


            self.state = 86
            self.match(SQLParser.FROM)
            self.state = 87
            self.tableName()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 88
                self.whereClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(SQLParser.CREATE, 0)

        def TABLE(self):
            return self.getToken(SQLParser.TABLE, 0)

        def tableName(self):
            return self.getTypedRuleContext(SQLParser.TableNameContext,0)


        def columnSpecList(self):
            return self.getTypedRuleContext(SQLParser.ColumnSpecListContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_createStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateStatement" ):
                listener.enterCreateStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateStatement" ):
                listener.exitCreateStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateStatement" ):
                return visitor.visitCreateStatement(self)
            else:
                return visitor.visitChildren(self)




    def createStatement(self):

        localctx = SQLParser.CreateStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_createStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(SQLParser.CREATE)
            self.state = 92
            self.match(SQLParser.TABLE)
            self.state = 93
            self.tableName()
            self.state = 94
            self.match(SQLParser.T__0)
            self.state = 95
            self.columnSpecList()
            self.state = 96
            self.match(SQLParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateDatabaseStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(SQLParser.CREATE, 0)

        def DATABASE(self):
            return self.getToken(SQLParser.DATABASE, 0)

        def databaseName(self):
            return self.getTypedRuleContext(SQLParser.DatabaseNameContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_createDatabaseStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateDatabaseStatement" ):
                listener.enterCreateDatabaseStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateDatabaseStatement" ):
                listener.exitCreateDatabaseStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateDatabaseStatement" ):
                return visitor.visitCreateDatabaseStatement(self)
            else:
                return visitor.visitChildren(self)




    def createDatabaseStatement(self):

        localctx = SQLParser.CreateDatabaseStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_createDatabaseStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(SQLParser.CREATE)
            self.state = 99
            self.match(SQLParser.DATABASE)
            self.state = 100
            self.databaseName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELETE(self):
            return self.getToken(SQLParser.DELETE, 0)

        def FROM(self):
            return self.getToken(SQLParser.FROM, 0)

        def tableName(self):
            return self.getTypedRuleContext(SQLParser.TableNameContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(SQLParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_deleteStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeleteStatement" ):
                listener.enterDeleteStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeleteStatement" ):
                listener.exitDeleteStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeleteStatement" ):
                return visitor.visitDeleteStatement(self)
            else:
                return visitor.visitChildren(self)




    def deleteStatement(self):

        localctx = SQLParser.DeleteStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_deleteStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(SQLParser.DELETE)
            self.state = 103
            self.match(SQLParser.FROM)
            self.state = 104
            self.tableName()
            self.state = 105
            self.whereClause()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UPDATE(self):
            return self.getToken(SQLParser.UPDATE, 0)

        def tableName(self):
            return self.getTypedRuleContext(SQLParser.TableNameContext,0)


        def SET(self):
            return self.getToken(SQLParser.SET, 0)

        def setValList(self):
            return self.getTypedRuleContext(SQLParser.SetValListContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(SQLParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_updateStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdateStatement" ):
                listener.enterUpdateStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdateStatement" ):
                listener.exitUpdateStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpdateStatement" ):
                return visitor.visitUpdateStatement(self)
            else:
                return visitor.visitChildren(self)




    def updateStatement(self):

        localctx = SQLParser.UpdateStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_updateStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(SQLParser.UPDATE)
            self.state = 108
            self.tableName()
            self.state = 109
            self.match(SQLParser.SET)
            self.state = 110
            self.setValList()
            self.state = 111
            self.whereClause()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(SQLParser.WHERE, 0)

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.ConditionContext)
            else:
                return self.getTypedRuleContext(SQLParser.ConditionContext,i)


        def OR(self):
            return self.getToken(SQLParser.OR, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_whereClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhereClause" ):
                listener.enterWhereClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhereClause" ):
                listener.exitWhereClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhereClause" ):
                return visitor.visitWhereClause(self)
            else:
                return visitor.visitChildren(self)




    def whereClause(self):

        localctx = SQLParser.WhereClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whereClause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(SQLParser.WHERE)
            self.state = 114
            self.condition()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 115
                self.match(SQLParser.OR)
                self.state = 116
                self.condition()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SQLParser.ID, 0)

        def operator(self):
            return self.getTypedRuleContext(SQLParser.OperatorContext,0)


        def literal(self):
            return self.getTypedRuleContext(SQLParser.LiteralContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = SQLParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(SQLParser.ID)
            self.state = 120
            self.operator()
            self.state = 121
            self.literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.LiteralContext)
            else:
                return self.getTypedRuleContext(SQLParser.LiteralContext,i)


        def getRuleIndex(self):
            return SQLParser.RULE_valueList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValueList" ):
                listener.enterValueList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValueList" ):
                listener.exitValueList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValueList" ):
                return visitor.visitValueList(self)
            else:
                return visitor.visitChildren(self)




    def valueList(self):

        localctx = SQLParser.ValueListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_valueList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.literal()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 124
                self.match(SQLParser.T__2)
                self.state = 125
                self.literal()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetValListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def setVal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.SetValContext)
            else:
                return self.getTypedRuleContext(SQLParser.SetValContext,i)


        def getRuleIndex(self):
            return SQLParser.RULE_setValList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetValList" ):
                listener.enterSetValList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetValList" ):
                listener.exitSetValList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetValList" ):
                return visitor.visitSetValList(self)
            else:
                return visitor.visitChildren(self)




    def setValList(self):

        localctx = SQLParser.SetValListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_setValList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.setVal()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 132
                self.match(SQLParser.T__2)
                self.state = 133
                self.setVal()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetValContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SQLParser.ID, 0)

        def literal(self):
            return self.getTypedRuleContext(SQLParser.LiteralContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_setVal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetVal" ):
                listener.enterSetVal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetVal" ):
                listener.exitSetVal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetVal" ):
                return visitor.visitSetVal(self)
            else:
                return visitor.visitChildren(self)




    def setVal(self):

        localctx = SQLParser.SetValContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_setVal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(SQLParser.ID)
            self.state = 140
            self.match(SQLParser.T__3)
            self.state = 141
            self.literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.ID)
            else:
                return self.getToken(SQLParser.ID, i)

        def getRuleIndex(self):
            return SQLParser.RULE_columnList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnList" ):
                listener.enterColumnList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnList" ):
                listener.exitColumnList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnList" ):
                return visitor.visitColumnList(self)
            else:
                return visitor.visitChildren(self)




    def columnList(self):

        localctx = SQLParser.ColumnListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_columnList)
        self._la = 0 # Token type
        try:
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [33]:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.match(SQLParser.ID)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 144
                    self.match(SQLParser.T__2)
                    self.state = 145
                    self.match(SQLParser.ID)
                    self.state = 150
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(SQLParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

